fix: on Safari iOS, prevent text selection when interacting with the virtual keyboard

--- a/css/mathfield.less
+++ b/css/mathfield.less
@@ -186,7 +186,7 @@ with this style */
   opacity: 0.5;
 }
 
-.ML__virtual-keyboard-toggle.is-visible.pressed:hover {
+.ML__virtual-keyboard-toggle.is-visible.is-pressed:hover {
   background: hsl(var(--hue, 212), 25%, 35%);
   color: #fafafa;
   fill: currentColor;
@@ -198,9 +198,9 @@ with this style */
   border: 2px solid var(--primary, hsl(var(--hue, 212), 40%, 50%));
 }
 
-.ML__virtual-keyboard-toggle.pressed,
-.ML__virtual-keyboard-toggle.active:hover,
-.ML__virtual-keyboard-toggle.active {
+.ML__virtual-keyboard-toggle.is-pressed,
+.ML__virtual-keyboard-toggle.is-active:hover,
+.ML__virtual-keyboard-toggle.is-active {
   background: hsl(var(--hue, 212), 25%, 35%);
   color: #fafafa;
   fill: currentColor;
