--- a/css/virtual-keyboard.less
+++ b/css/virtual-keyboard.less
@@ -178,8 +178,8 @@
         color: var(--keyboard-alternate-text);
         fill: currentColor;
         &:hover,
-        &.pressed,
-        &.active {
+        &.is-pressed,
+        &.is-active {
           box-shadow: @shadow3;
           background: var(--keyboard-alternate-background-active);
           color: var(--keyboard-text-active);
@@ -212,8 +212,8 @@
           justify-content: center;
           border-radius: 5px;
           &:hover,
-          &.pressed,
-          &.active {
+          &.is-pressed,
+          &.is-active {
             background: red;
           }
           svg {
@@ -303,7 +303,7 @@
 
       &.disabled svg,
       &.disabled:hover svg,
-      &.disabled.pressed svg {
+      &.disabled.is-pressed svg {
         color: var(--keyboard-text);
         opacity: 0.2;
       }
@@ -321,8 +321,8 @@
       }
       &:hover,
       &:active,
-      &.pressed,
-      &.active {
+      &.is-pressed,
+      &.is-active {
         color: var(--keyboard-text-active);
       }
       &.selected {
@@ -467,21 +467,21 @@
         }
         // &.tt {font-size: 30px;}
         &:hover,
-        &.pressed {
+        &.is-pressed {
           // box-shadow: inset 0 0 1px 1px #8d8f92;
           background: var(--keycap-background-active);
           color: var(--keyboard-text-active);
         }
         &.keycap:active,
-        &.keycap.active,
+        &.keycap.is-active,
         &.action:active,
-        &.action.active {
+        &.action.is-active {
           transform: translateY(-20px) scale(1.4, 1.4);
           z-index: calc(var(--keyboard-zindex, @keyboard-zindex) - 5);
           color: var(--keyboard-text-active);
         }
         &.modifier:active,
-        &.modifier.active {
+        &.modifier.is-active {
           background: var(--keyboard-text-active);
           color: var(--keycap-text-active);
         }
@@ -527,8 +527,8 @@
           color: var(--keyboard-text-active);
           &:hover,
           &:active,
-          &.pressed,
-          &.active {
+          &.is-pressed,
+          &.is-active {
             color: white;
           }
         }
@@ -718,8 +718,8 @@ div.ML__keyboard.material {
 
     ul li:hover,
     ul li:active,
-    ul li.active,
-    ul li.pressed {
+    ul li.is-active,
+    ul li.is-pressed {
       border: 1px solid transparent;
       background: @material-primary;
       color: white;
@@ -733,8 +733,8 @@ div.ML__keyboard.material {
     }
     div div:hover,
     div div:active,
-    div.div.active,
-    div.div.pressed {
+    div.div.is-active,
+    div.div.is-pressed {
       color: @material-primary;
       fill: currentColor;
     }
@@ -767,8 +767,8 @@ div.ML__keyboard.material {
 
       &:hover,
       &:active,
-      &.active,
-      &.pressed {
+      &.is-active,
+      &.is-pressed {
         background: #d0d0d0;
         box-shadow: none;
         transform: none;
@@ -779,8 +779,8 @@ div.ML__keyboard.material {
       background: var(--keycap-background-active);
       box-shadow: none;
     }
-    &:not([data-key=' ']).pressed,
-    &:not([data-key=' ']).active,
+    &:not([data-key=' ']).is-pressed,
+    &:not([data-key=' ']).is-active,
     &:not([data-key=' ']):active {
       background: var(--keyboard-alternate-background);
       color: var(--keyboard-alternate-text);
@@ -804,7 +804,7 @@ div.ML__keyboard.material {
       }
     }
     &:last-child:active,
-    &:last-child.active {
+    &:last-child.is-active {
       @media only screen and (max-width: 767px) {
         margin-right: 0;
         margin-left: 14px;
@@ -827,8 +827,8 @@ div.ML__keyboard.material {
     }
     &:hover,
     &:active,
-    &.active,
-    &.pressed {
+    &.is-active,
+    &.is-pressed {
       border: 0;
       color: var(--keycap-text);
       background: var(--keycap-background-active);
@@ -849,8 +849,8 @@ div.ML__keyboard.material {
     }
     &:hover,
     &:active,
-    &.pressed,
-    &.active {
+    &.is-pressed,
+    &.is-active {
       border: 0;
       color: @material-primary;
       fill: currentColor;
